Development Portal (2025-01-08 shi)
==============================
Update money table css


Development Portal (2025-01-07 shi)
==============================
Add new theme
Update crumb seperator
Update data quality page

Development Portal (2024-09-04 shi)
==============================
Remove CRS from sectors table
Remove data descriptions for CRS


Development Portal (2024-09-03 shi)
==============================
Add activity status codes
Update translation text


Development Portal (2024-07-17 shi)
==============================
Add SDG svg icons to SAVi css
Minor css fixes


Development Portal (2024-07-12 shi)
==============================
Update text for SDG filters


Development Portal (2024-07-11 shi)
==============================
Add SDG to main section
Print-friendly css fixes
Add SDG dropdown text
Include SDG icons in filter text
Update filter to flex


Development Portal (2024-06-16 shi)
==============================
Updated link to IATI Publishing Guidance in glossary


Development Portal (2024-05-29 shi)
==============================
Update css for bar charts


Development Portal (2024-05-10 shi)
==============================
Minor css fixes
New stats section for activity status


Development Portal (2024-04-16 shi)
==============================
Update css for new graph bars
Add view all link to participating-org header


Development Portal (2024-04-11 shi)
==============================
Fix old translation text
Update participating-org page text
Update all translations


Development Portal (2024-04-10 shi)
==============================
Update new graphs layouts
Update css


Development Portal (2024-04-08 shi)
==============================
Update IATI Organisations to IATI Reporting Orgs
Update Orgs to Organisations
Add participating-org list page


Development Portal (2024-04-04 shi)
==============================
Update all 'publisher/s' to 'organisation/s'
Fix link text for mentions
Update all translations

