@@ -85,9 +85,15 @@
 
 #table_sectors_row_head
 <tr class="row1">
-	<th class="col2" onclick="ctrack.dosort('sector');" 			title="{table_sector_tip_title_sector_text}"	 >{table_sector_title_sector_text}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></th>
-	<th class="col3" colspan="3" title="{table_sector_tip_title_transaction_text}"><span onclick="ctrack.dosort('trans');">{table_sector_title_transaction_text}</span> <a href="#view=sectors&year={year1}" onclick="return ctrack.url('#view=sectors&year={year1}');" title="Previous Year" class="year prev">&lt;</a><span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></th>
-	<th class="col4" colspan="2" title="{table_sector_tip_title_budget_text}"><span onclick="ctrack.dosort('budget');">{table_sector_title_budget_text}</span> <a href="#view=sectors&year={year3}" onclick="return ctrack.url('#view=sectors&year={year3}');" title="Next Year" class="year next">&gt;</a><span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></th>
+	<th class="col2" onclick="ctrack.dosort('sector');" title="{table_sector_tip_title_sector_text}">
+		{table_sector_title_sector_text}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span>
+	</th>
+	<th class="col3" colspan="3" title="{table_sector_tip_title_transaction_text}">
+		<span onclick="ctrack.dosort('trans');">{table_sector_title_transaction_text}</span> <a href="#view=sectors&year={year1}" onclick="return ctrack.url('#view=sectors&year={year1}');" title="Previous Year" class="year prev">&lt;</a><span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span>
+	</th>
+	<th class="col4" colspan="2" title="{table_sector_tip_title_budget_text}">
+		<span onclick="ctrack.dosort('budget');">{table_sector_title_budget_text}</span> <a href="#view=sectors&year={year3}" onclick="return ctrack.url('#view=sectors&year={year3}');" title="Next Year" class="year next">&gt;</a><span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span>
+	</th>
 </tr>
 <tr class="row2">
 	<td class="col2" title="{table_sort_text}"	onclick="ctrack.dosort('sector');"	>{table_donor_subtitle_donor_text}<span class="sort"><img src="{flava}sort_icon.png" alt="{sort_icon_alt_text}" width="15" height="15"></span></td>
