@@ -1,6 +1,7 @@
 Development Portal (2025-01-08 shi)
 ==============================
 Update money table css
+Update SAVi new theme
 
 
 Development Portal (2025-01-07 shi)
